View one entry functionality

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="app"></div>
-        
+
         <script src="app/assets/js/jquery.js"></script>
 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -16,6 +16,8 @@
         <script src="app/table/create-row.js"></script>
         <script src="app/table/delete-row.js"></script>
         <script src="app/table/update-row.js"></script>
+        <script src="app/table/read-one.js"></script>
         <script src="app/table/read-server-data.js"></script>
+        
     </body>
 </html>
