Search functionality, delete functionality

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <script src="app/table/update-row.js"></script>
         <script src="app/table/read-one.js"></script>
         <script src="app/table/read-server-data.js"></script>
+        <script src="app/table/entries.js"></script>
+        <script src="app/table/search-entries.js"></script>
         
     </body>
 </html>
